header alignment and left right button size fixed

--- a/src/components/imageCard/imageCard.module.css
+++ b/src/components/imageCard/imageCard.module.css
@@ -40,7 +40,8 @@
     position: absolute;
     right: 3rem;
     bottom: 3rem;
-    width: max(3rem, 5vw);
+    width: 61px;
+    /* width: max(3rem, 5vw); */
 }
 
 @media screen and (max-width: 700px) {
